<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingHorizontal="5dp">

        <Button
            android:id="@+id/playAllBtn"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/play_icon"
            android:text="@string/play_all"
            android:textSize="10sp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/teal_700"/>

        <Button
            android:id="@+id/shuffleBtn"
            android:layout_weight="1"
            android:backgroundTint="@color/cool_blue"
            android:drawableLeft="@drawable/shuffle_icon"
            android:text="@string/shuffle_btn"
            android:textSize="10sp"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="60dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/totalVideos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:paddingHorizontal="10dp"
        android:text="@string/total_audios"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>